overlays/dev/kong/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress  # You can rename this as needed
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: jwt-plugin
spec:
  ingressClassName: kong
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
